# ncbi_gene_analysis

./: Dockerfile  README.md  docker-compose.yml  gene_expression_analysis.ipynb  pyproject.toml
utils/: parsers.py  samples.py
